Try and fix extra-large footer issue again, via align-self on body > main. Also make body > main bear the brunt of the size, so body is extra large if at all.

--- a/assets/css/wiki.css
+++ b/assets/css/wiki.css
@@ -2570,12 +2570,15 @@ pre, code {
   body {
     grid-template-areas: "nav    header" "nav    tabs" "nav    content" "nav    footer";
     grid-template-columns: 240px 10fr;
-    grid-template-rows: 50px 24px minmax(0, min-content) auto; }
+    grid-template-rows: 50px 24px auto minmax(10px, 50px); }
 
   .tabs {
     flex-direction: row; }
     .tabs li {
       margin: 0 10px 0 0; }
+
+  body > main {
+    align-self: start; }
 
   .frontmatter {
     display: flex;
